# Real-time-VIMP

./: .gitignore  .gitmodules  README  README.md  dependencies.repos
controllers/mobile_robot_controller/: CMakeLists.txt  package.xml
controllers/mobile_robot_controller/include/mobile_robot_controller/: compute_pose_update.h
controllers/mobile_robot_controller/src/: compute_pose_update.cpp
controllers/six_dof_arm_controller/: CMakeLists.txt  package.xml
controllers/six_dof_arm_controller/include/six_dof_arm_controller/: add_time_parameterization.h
controllers/six_dof_arm_controller/launch/: robot_control_interface.launch.py  robot_control_interface_cuda.launch.py
controllers/six_dof_arm_controller/src/: add_time_parameterization.cpp
data_visualization/: package.xml  setup.py
data_visualization/data_visualization/: VisualizeResults.py
env_construction/: CMakeLists.txt  package.xml
env_construction/include/env_construction/: octomap_to_gridmap.h
env_construction/src/: octomap_to_gridmap.cpp
gazebo_simulation/: CMakeLists.txt  package.xml
gazebo_simulation/config/: mycobot_280_controllers.yaml
gazebo_simulation/launch/: robot_with_control_added_simulation.launch.py
gazebo_simulation/moveit_setup/: .setup_assistant
gazebo_simulation/moveit_setup/launch/: demo.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
gazebo_simulation/urdf/: lidar_sensor.urdf.xacro  mycobot_280.urdf.xacro  mycobot_280_classic_gazebo.xacro
gazebo_simulations/mobile_robot_gazebo/: CMakeLists.txt  package.xml
gazebo_simulations/mobile_robot_gazebo/launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py
gazebo_simulations/mobile_robot_gazebo/models/turtlebot3_burger/: model-1_4.sdf  model.sdf
gazebo_simulations/mobile_robot_gazebo/rviz/: tb3_gazebo.rviz
gazebo_simulations/mobile_robot_gazebo/urdf/: turtlebot3_burger.urdf
gazebo_simulations/six_dof_arm_gazebo/: CMakeLists.txt  package.xml
gazebo_simulations/six_dof_arm_gazebo/launch/: six_dof_arm_simulation.launch.py
gazebo_simulations/six_dof_arm_gazebo/moveit_setup/: CMakeLists.txt  package.xml
gazebo_simulations/six_dof_arm_gazebo/moveit_setup/config/: joint_limits.yaml  mycobot_280.srdf  mycobot_280.urdf.xacro  ros2_controllers.yaml
gazebo_simulations/six_dof_arm_gazebo/moveit_setup/launch/: move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py
gazebo_simulations/six_dof_arm_gazebo/urdf/: mycobot_280.urdf.xacro  mycobot_280_classic_gazebo.urdf  mycobot_280_classic_gazebo.xacro
gazebo_simulations/six_dof_arm_gazebo/worlds/: test_env1.world
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/env_construction/share/env_construction/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/grid_map/share/grid_map/: local_setup.sh  package.sh
install/grid_map_cmake_helpers/share/grid_map_cmake_helpers/: local_setup.sh  package.sh
install/grid_map_core/share/grid_map_core/: local_setup.sh  package.sh
install/grid_map_costmap_2d/share/grid_map_costmap_2d/: local_setup.dsv  local_setup.sh  package.sh
install/grid_map_cv/share/grid_map_cv/: package.sh
install/grid_map_demos/lib/grid_map_demos/: filters_demo  image_to_gridmap_demo  interpolation_demo  iterators_demo  move_demo  normal_filter_comparison_demo  octomap_to_gridmap_demo  opencv_demo  resolution_change_demo  simple_demo  tutorial_demo
install/grid_map_demos/share/grid_map_demos/: package.sh
install/grid_map_filters/share/grid_map_filters/: local_setup.sh  package.sh
install/grid_map_loader/lib/grid_map_loader/: grid_map_loader
install/grid_map_loader/share/grid_map_loader/: package.sh
install/grid_map_msgs/share/grid_map_msgs/: local_setup.sh  package.sh
install/grid_map_octomap/share/grid_map_octomap/: local_setup.sh  package.sh
install/grid_map_pcl/lib/grid_map_pcl/: grid_map_pcl_loader_node
install/grid_map_pcl/share/grid_map_pcl/: package.sh
install/grid_map_ros/share/grid_map_ros/: package.sh
install/grid_map_rviz_plugin/share/grid_map_rviz_plugin/: local_setup.sh  package.sh
install/grid_map_sdf/share/grid_map_sdf/: package.sh
install/grid_map_visualization/lib/grid_map_visualization/: grid_map_visualization
install/grid_map_visualization/share/grid_map_visualization/: local_setup.sh  package.sh
install/motion_planning/share/motion_planning/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/octomap_msgs/share/octomap_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pcl_msgs/share/pcl_msgs/: local_setup.sh  (+1 more)
log/: latest_build
motion_planning/: CMakeLists.txt  package.xml
motion_planning/include/motion_planning/: GVIMPImpl.h  GVIMPMobileRobot.h  GVIMPMobileRobot_Impl.h  GVIMPRobotArm.h  GVIMPRobotArm_Cuda.h  GVIMPRobotArm_CudaImpl.h  GVIMPRobotArm_Impl.h  MobileRobot.h  RobotArm3D.h  SDF_generation.h
motion_planning/src/: GVIMPImpl.cpp  GVIMPMobileRobot.cpp  GVIMPMobileRobot_Impl.cpp  GVIMPRobotArm.cpp  GVIMPRobotArm_Cuda.cpp  GVIMPRobotArm_CudaImpl.cpp  GVIMPRobotArm_Impl.cpp  MobileRobot.cpp  RobotArm3D.cpp  SDF_generation.cpp  sim_config.xml
motion_planning_msgs/: CMakeLists.txt  package.xml
motion_planning_msgs/msg/: VisualizedPath.msg  WaypointPath.msg
motion_planning_msgs/srv/: RuntimeParameterInterface.srv  RuntimePathInterface.srv
robot_control/: CMakeLists.txt  package.xml
robot_control/include/robot_control/: add_time_parameterization.h  publish_final_trajectory.h  robot_control_interface.h
robot_control/launch/: robot_control_interface.launch.py
robot_control/src/: add_time_parameterization.cpp  publish_final_trajectory.cpp  robot_control_interface.cpp
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: mycobot_280_arduino_view_description.launch.py
robot_description/urdf/: mycobot_280_urdf.xacro
(+235 files in other folders)
