<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>six_dof_arm_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ctaylor319@gatech.edu">ctaylor319</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>trajectory_msgs</depend>
  <depend>mycobot_gazebo</depend>
  <depend>moveit</depend>
  <depend>moveit_core</depend>
  <depend>octomap</depend>
  <depend>motion_planning_msgs</depend>
  <depend>six_dof_arm_gazebo</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
